# lido-vesting-escrow

./: .gitignore  LICENSE  brownie-config.yaml  deployed-goerli.json  deployed-holesky.json  deployed-hoodi.json  deployed-mainnet.json  ganache.sh  input.csv.example  input.csv.example.sum  input.csv.sum  network-config.yaml  package-lock.json  package.json  pyproject.toml  readme.md  requirements-dev.txt  vesting_initial_params.py  vesting_initial_params_holesky.py  vesting_initial_params_hoodi.py
.github/workflows/: test.yaml
abi/: VestingEscrowAbi.json  VestingEscrowFactoryAbi.json  VotingAdapterAbi.json
contracts/: VestingEscrow.vy  VestingEscrowFactory.vy  VestingEscrowFullyRevokable.vy  VestingEscrowOptimized.vy  VestingEscrowSimple.vy  VotingAdapter.vy
escrow_params/: batch_1.csv  batch_1.hash  batch_10.csv  batch_10.hash  batch_11.csv  batch_11.hash  batch_12.csv  batch_12.hash  batch_13.csv  batch_13.hash  batch_14.csv  batch_14.hash  batch_15.csv  batch_15.hash  batch_16.csv  batch_16.hash  batch_2.csv  batch_2.hash  batch_20.csv  batch_20.hash  batch_21.csv  batch_21.hash  batch_22.csv  batch_22.hash  batch_23.csv  batch_23.hash  batch_24.csv  batch_24.hash  batch_25.csv  batch_25.hash  batch_25_1.csv  batch_25_1.hash  batch_25_2.csv  batch_25_2.hash  batch_26.csv  batch_26.hash  batch_27.csv  batch_27.hash  batch_28.csv  batch_28.hash  (+30 more)
scripts/: build_multisig_tx.py  deploy.py  eip712sign.html  main.py  multisig_tx.py  safe_delegates.py
tests/: conftest.py  utils.py
utils/: config.py  deployed_state.py  env.py  helpers.py  log.py
(+39 files in other folders)
